--- a/index.html
+++ b/index.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Guanqing&#39;s Redirect Url : Redirect url">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Tests-and-misc-for-android by haoguanqing</title>
+    <title>Guanqing&#39;s Redirect Url</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Tests-and-misc-for-android</h1>
-        <h2>Redirect url</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/haoguanqing/Tests-Misc-for-Android">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/haoguanqing/Tests-Misc-for-Android/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/haoguanqing/Tests-Misc-for-Android/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/haoguanqing/Tests-Misc-for-Android" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Guanqing&#39;s Redirect Url</h1>
+          <h2 id="project_tagline">Redirect url</h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/haoguanqing/Tests-Misc-for-Android/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/haoguanqing/Tests-Misc-for-Android/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p>To maintain a redirect url</p>
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Guanqing&#39;s Redirect Url maintained by <a href="https://github.com/haoguanqing">haoguanqing</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
